samples/_failures_safe/1761457959_46291d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56957141.c: In function ‘main’:
./samples/SAFE/__tmp_56957141.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_56957141.c:171:9: error: expected declaration or statement at end of input
  171 |         if
      |         ^~
./samples/SAFE/__tmp_56957141.c:171:9: error: expected declaration or statement at end of input
